--- a/src/Style/ConfirmDetails.css
+++ b/src/Style/ConfirmDetails.css
@@ -1,25 +1,20 @@
 .componentMargin1 {
-  margin-top: 6em;
-  margin-left: 4em;
+  margin-top: 4em;
 }
 .componentMargin2 {
-  margin-top: 5em;
-  margin-left: 4em;
+  margin-top: 4em;
 }
 .componentMargin3 {
   margin-top: 2em;
-  margin-left: 4em;
 }
 .componentMargin4 {
   margin-top: 2em;
-  margin-left: 4em;
 }
 .componentMargin {
   margin-top: 4em;
-  margin-left: 2.5em;
 }
 .head1 {
-  font-size: 3em;
+  font-size: calc(8px + 2vw);
   font-weight: "bold";
   font-family: oswald;
 }
@@ -74,17 +69,17 @@
 }
 /* confirm details passwords page */
 .head2 {
-  font-size: 3em;
+  font-size: calc(8px + 2vw);
   font-weight: 400;
   font-family: oswald;
 }
 .staticText1 {
-  font-size: 1.8em;
+  font-size: calc(7px + 1vw);
   margin-top: 0.7em;
   font-family: Domine;
 }
 .staticText2 {
-  font-size: 1.2em;
+  font-size: calc(3px + 1vw);
   font-family: Domine;
 }
 .passwordForgotLink {
