--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -1,20 +1,17 @@
-.header {
-  margin-left: 3em;
-}
 .fontOswald {
   font-family: oswald;
   font-size: 1.2em;
 }
 .LogoIcon {
-  margin-left: -2em;
 }
 .arrowIcon3 {
   margin-top: 0.3em;
+  text-align: right;
+  padding-right: 0.5em;
 }
 .headerMarginTop {
   padding-top: 2.5em;
   padding-bottom: 0.5em;
-  margin: 0;
 }
 .stepperMarginTop {
   margin-top: 2em;
