--- a/src/Style/PurchaseKit.css
+++ b/src/Style/PurchaseKit.css
@@ -1,11 +1,9 @@
 .purchaseComponentMargin1 {
   margin-top: 2em;
-  margin-left: 4em;
 }
 .purchaseComponentMargin2 {
   overflow-y: auto;
   margin-top: 2em;
-  margin-left: 4em;
 }
 ::-webkit-scrollbar {
   width: 0; /* Remove scrollbar space */
@@ -20,6 +18,7 @@
   margin-top: 1em;
   padding: 1em;
   font-family: Domine;
+  width: 65vw;
 }
 .subTotalText {
   font-size: 1.3em;
@@ -39,6 +38,7 @@
   background: #241f20;
   padding: 1em;
   font-family: Domine;
+  width: 65vw;
 }
 .ResultText {
   font-size: 1.5em;
@@ -53,6 +53,7 @@
   margin-top: 0.7em;
   color: #241f20;
   font-size: 0.8em;
+  width: 65vw;
 }
 .paymentHead {
   font-family: oswald;
@@ -66,7 +67,6 @@
 .purchaseInputMargin1 {
   margin-bottom: 1em;
   margin-top: 1em;
-  margin-left: 1.9em;
 }
 .purchasehead3 {
   color: grey;
@@ -78,7 +78,7 @@
   border-width: 1px;
   border-color: #d8c5a6 !important;
   border-radius: 0 !important;
-  width: 30.5em !important;
+  width: 30vw !important;
   height: 4em !important;
   margin-bottom: 0.5em;
 }
@@ -89,7 +89,7 @@
   border-width: 1px;
   border-color: red !important;
   border-radius: 0 !important;
-  width: 30.5em !important;
+  width: 30vw !important;
   height: 4em !important;
   margin-bottom: 0.5em;
 }
@@ -111,7 +111,7 @@
   border-width: 1px;
   border-color: #d8c5a6 !important;
   border-radius: 0 !important;
-  width: 14.8em !important;
+  width: 13vw !important;
   height: 4em !important;
   margin-bottom: 0.5em;
 }
@@ -122,7 +122,7 @@
   border-width: 1px;
   border-color: red !important;
   border-radius: 0 !important;
-  width: 15em !important;
+  width: 13vw !important;
   height: 4em !important;
   margin-bottom: 0.5em;
 }
@@ -154,7 +154,7 @@
   border-width: 1px;
   border-color: #d8c5a6 !important;
   border-radius: 0 !important;
-  width: 14.4em !important;
+  width: 13vw !important;
   height: 4em !important;
   margin-bottom: 0.5em;
 }
@@ -165,16 +165,14 @@
   border-width: 1px;
   border-color: red !important;
   border-radius: 0 !important;
-  width: 14.4em !important;
+  width: 13vw !important;
   height: 4em !important;
   margin-bottom: 0.5em;
 }
 .purchaseRed2:focus {
   border-color: red !important;
 }
-.desktopViewMarginLeft {
-  margin-left: 7em;
-}
+
 @media only screen and (max-width: 768px) {
   .purchaseInput2 {
     border-width: 1px;
