--- a/src/Style/ConfirmDetails.css
+++ b/src/Style/ConfirmDetails.css
@@ -1,17 +1,17 @@
 .componentMargin1 {
-  margin-top: 4em;
+  margin-top: 20px;
 }
 .componentMargin2 {
-  margin-top: 4em;
+  margin-top: 20px;
 }
 .componentMargin3 {
-  margin-top: 2em;
+  margin-top: 10px;
 }
 .componentMargin4 {
-  margin-top: 2em;
+  margin-top: 10px;
 }
 .componentMargin {
-  margin-top: 4em;
+  margin-top: 20px;
 }
 .head1 {
   font-size: calc(8px + 2vw);
