--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -10,11 +10,11 @@
   padding-right: 0.5em;
 }
 .headerMarginTop {
-  padding-top: 2.5em;
-  padding-bottom: 0.5em;
+  padding-top: 20px;
+  padding-bottom: 10px;
 }
 .stepperMarginTop {
-  margin-top: 2em;
+  margin-top: 15px;
 }
 .Home-step-1 {
   border: 0px solid white;
@@ -23,6 +23,9 @@
 }
 .MuiStepIcon-root-53.MuiStepIcon-active-54 .MuiStepIcon-text-54 {
   fill: #034691 !important;
+}
+.HomeContainer {
+  padding-bottom: 60px;
 }
 @media only screen and (max-width: 550px) {
   .mobileMargin {
