--- a/src/Style/PaymentConfirmation.css
+++ b/src/Style/PaymentConfirmation.css
@@ -1,6 +1,5 @@
 .PCcomponentMargin {
   margin-top: 4em;
-  margin-left: 2.5em;
 }
 .paymentConfirmationHead {
   font-family: Oswald;
@@ -23,6 +22,8 @@
   text-align: center;
   font-size: 1.2em;
   padding-top: 0.4em;
+  margin-left: auto;
+  margin-right: auto;
 }
 .paymentConfirmationHead2 {
   font-family: Oswald;
@@ -46,6 +47,8 @@
   font-weight: bold;
   padding-top: 0.25em;
   font-family: Oswald;
+  margin-left: auto;
+  margin-right: auto;
 }
 .pcHead4 {
   font-family: oswald;
@@ -53,6 +56,8 @@
   font-size: 1.4em;
   margin-top: 1em;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .fontOswald1 {
   font-family: oswald;
@@ -67,9 +72,8 @@
 .pcFooter {
   background: #241f20;
   width: 100%;
-  height: 39vh;
-  position: absolute;
-  bottom: 0;
+  height: 45vh;
+  padding-top: 1.5em;
   overflow: hidden;
 }
 .pcFooterHead {
@@ -77,7 +81,6 @@
   font-size: 1.7em;
   font-weight: 300;
   color: #ffffff;
-  margin-top: 1.5em;
   text-align: center;
 }
 .pcFooterCard {
@@ -91,7 +94,7 @@
   cursor: pointer;
 }
 .pcFooterLeftMargin {
-  margin-left: 20vw;
+  margin-left: 18vw;
 }
 .pcCardMarginLeft {
   margin-left: 20vw;
