--- a/src/Style/BusinessDetails.css
+++ b/src/Style/BusinessDetails.css
@@ -1,18 +1,34 @@
 .BDcomponentMargin {
   margin-top: 2em;
 }
-
+.BDhead1 {
+  font-size: calc(6px + 1.8vw);
+  font-weight: "bold";
+  font-family: oswald;
+}
+.BDstaticText3 {
+  font-size: calc(2px + 1vw);
+  font-family: Domine;
+  margin-top: 0.8em;
+}
+.BDstaticText4 {
+  font-size: calc(2px + 1vw);
+  font-family: Domine;
+  margin-top: 3.6vw;
+  font-weight: bold;
+}
 .customURL {
   border-width: 1px;
   border-color: #d8c5a6;
   border-radius: 0;
-  width: 20em !important;
+  width: 22vw !important;
   height: 3.8em !important;
   margin-bottom: 0.5em;
-  margin-top: 2.5em;
+  margin-top: 2.3vw;
   font-weight: bold;
   font-size: 1em;
   font-family: Domine;
+  margin-left: -5vw;
 }
 .customURL:focus {
   border-color: #d8c5a6;
@@ -31,21 +47,22 @@
   margin-top: 3em;
   font-family: oswald;
   font-size: 1.1em;
-  margin-left: 0.7em;
+  margin-left: 0.2em;
 }
 
 .customURLRed {
   border-width: 1px;
   border-color: red !important;
   border-radius: 1 !important;
-  width: 20em !important;
+  width: 22vw !important;
   height: 3.8em !important;
   margin-bottom: 0.5em;
-  margin-top: 2.5em;
+  margin-top: 2.3vw;
   font-weight: bold;
   font-size: 1em;
   font-family: Domine;
   border-radius: 0 !important;
+  margin-left: -5vw;
 }
 .customURLRed:focus {
   border-color: red;
@@ -61,20 +78,20 @@
 }
 
 .businessHead {
-  font-size: 2em;
+  font-size: calc(4px + 1.8vw);
   font-weight: 400;
   font-family: oswald;
-  margin-top: 2em;
+  margin-top: 1em;
 }
 .businessButton1 {
   background: #dcba80;
   text-align: center;
-  padding-top: 0.8em;
-  padding-bottom: 0.8em;
+  padding-top: 0.6em;
+  padding-bottom: 0.6em;
   padding-left: 0.5em;
   padding-right: 0.5em;
   color: white;
-  font-size: 1.4em;
+  font-size: calc(3px + 1.1vw);
   margin-top: 0.5em;
   font-family: Domine;
 }
@@ -85,12 +102,12 @@
 .businessButton2 {
   background: #dcba80;
   text-align: center;
-  padding-top: 0.8em;
-  padding-bottom: 0.8em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
   padding-left: 0.5em;
   padding-right: 0.5em;
   color: white;
-  font-size: 1.4em;
+  font-size: calc(3px + 1.1vw);
   margin-left: 0.3em;
   margin-top: 0.5em;
   font-family: Domine;
@@ -103,6 +120,19 @@
 .iconBusiness {
   margin-top: -0.15em;
   margin-right: 0.3em;
+}
+
+.businessButtonNotActive1 {
+  background: #f7f3f2;
+  color: #707070;
+  border-width: 2px;
+  border-color: #d8c5a6;
+  border-style: solid;
+  padding-top: 0.4em;
+  padding-bottom: 0.5em;
+}
+.businessButtonNotActive1:hover {
+  cursor: pointer;
 }
 
 .businessButtonNotActive {
@@ -118,7 +148,7 @@
 .ssn {
   font-family: oswald;
   font-size: 1.5em;
-  margin-top: 2em;
+  margin-top: 1.5em;
   font-weight: 400;
 }
 .ssnSubtext {
@@ -134,7 +164,7 @@
   width: 25em !important;
   height: 4.5em !important;
   margin-bottom: 0.5em;
-  margin-top: 1.5em;
+  margin-top: 1.3em;
   font-weight: bold;
   font-size: 1em;
   font-family: Domine;
@@ -165,6 +195,7 @@
 .ssnInput::placeholder,
 .ssnInputRed ::placeholder {
   font-weight: 100;
+  word-spacing: normal;
 }
 
 .entitySubtext {
@@ -172,7 +203,7 @@
   margin-top: 0.5em !important;
   margin-left: 0.5em;
   padding: 1.5em;
-  font-size: 1.1em !important;
+  font-size: calc(2px + 1vw) !important;
   width: 31.5em !important;
 }
 
